--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "graphql": "^16.6.0",
+    "i18next": "^21.9.2",
     "react": "18.1.0",
+    "react-i18next": "^11.18.6",
     "react-native": "0.70.1",
     "react-native-paper": "^4.12.4"
   },
