--- a/ios/CommercantMobile.xcodeproj/xcshareddata/xcschemes/CommercantMobile.xcscheme
+++ b/ios/CommercantMobile.xcodeproj/xcshareddata/xcschemes/CommercantMobile.xcscheme
@@ -60,6 +60,10 @@
             ReferencedContainer = "container:CommercantMobile.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <LocationScenarioReference
+         identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
+         referenceType = "1">
+      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
