--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.17.0",
+    "react-native-elements": "^3.4.2",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0"
   },
