--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@react-native-community/checkbox": "^0.5.12",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
     "graphql": "^16.6.0",
     "i18next": "^21.9.2",
     "react": "18.1.0",
     "react-i18next": "^11.18.6",
     "react-native": "0.70.1",
-    "react-native-paper": "^4.12.4"
+    "react-native-gesture-handler": "^2.6.2",
+    "react-native-paper": "^4.12.4",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
