--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-i18next": "^11.18.6",
     "react-native": "0.70.1",
     "react-native-gesture-handler": "^2.6.2",
-    "react-native-paper": "^4.12.4",
+    "react-native-paper": "5.0.0-rc.6",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.17.0"
+    "react-native-screens": "^3.17.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
