--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@react-native-community/checkbox": "^0.5.12",
     "graphql": "^16.6.0",
     "i18next": "^21.9.2",
     "react": "18.1.0",
