--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@react-native-community/checkbox": "^0.5.12",
+    "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "graphql": "^16.6.0",
@@ -19,12 +20,12 @@
     "react": "18.1.0",
     "react-i18next": "^11.18.6",
     "react-native": "0.70.1",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.6.2",
     "react-native-paper": "5.0.0-rc.6",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.17.0",
-    "react-native-elements": "^3.4.2",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0"
   },
