--- a/ios/CommercantMobile/Info.plist
+++ b/ios/CommercantMobile/Info.plist
@@ -81,6 +81,8 @@
 		<string>Lato-Regular.ttf</string>
 		<string>Lato-Thin.ttf</string>
 		<string>Lato-ThinItalic.ttf</string>
+		<string>MaterialIcons.ttf</string>
+  		<string>MaterialCommunityIcons.ttf</string>
 	</array>
 </dict>
 </plist>
