--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native": "0.70.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.6.2",
+    "react-native-image-crop-picker": "^0.38.0",
+    "react-native-image-picker": "^4.10.0",
     "react-native-paper": "5.0.0-rc.6",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
