--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.1.0",
     "react-i18next": "^11.18.6",
     "react-native": "0.70.1",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.6.2",
     "react-native-paper": "5.0.0-rc.6",
