--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.70.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.6.2",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-paper": "5.0.0-rc.6",
