--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "graphql": "^16.6.0",
+    "graphql-ws": "^5.11.2",
     "i18next": "^21.9.2",
     "react": "18.1.0",
     "react-i18next": "^11.18.6",
@@ -47,6 +48,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.72.1",
+    "react-devtools": "^4.26.1",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
   },
