--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.1.0",
     "react-i18next": "^11.18.6",
     "react-native": "0.70.1",
+    "react-native-date-picker": "^4.2.5",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.6.2",
@@ -28,6 +29,7 @@
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-paper": "5.0.0-rc.6",
+    "react-native-paper-dates": "^0.9.2",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.17.0",
