--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
@@ -22,6 +23,7 @@
     "react-i18next": "^11.18.6",
     "react-native": "0.70.1",
     "react-native-date-picker": "^4.2.5",
+    "react-native-async-storage": "^0.0.1",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.6.2",
