--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.6.0",
     "graphql-ws": "^5.11.2",
     "i18next": "^21.9.2",
+    "jetifier": "^2.0.0",
     "react": "18.1.0",
     "react-i18next": "^11.18.6",
     "react-native": "0.70.1",
@@ -26,6 +27,7 @@
     "react-native-currency-input": "^1.0.1",
     "react-native-date-picker": "^4.2.5",
     "react-native-dropdown-picker": "^5.4.2",
+    "react-native-dropdown-select-list": "^2.0.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.6.2",
     "react-native-gifted-chat": "^1.0.4",
@@ -33,7 +35,7 @@
     "react-native-image-picker": "^4.10.0",
     "react-native-paper": "5.0.0-rc.6",
     "react-native-paper-dates": "^0.9.2",
-    "react-native-reanimated": "^2.10.0",
+    "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.17.0",
     "react-native-swiper": "^1.6.0",
