--- a/app.json
+++ b/app.json
@@ -1,4 +1,14 @@
 {
   "name": "CommercantMobile",
-  "displayName": "CommercantMobile"
+  "displayName": "CommercantMobile",
+  "expo": {
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ]
+    ]
+  }
 }
