--- a/app.json
+++ b/app.json
@@ -8,6 +8,23 @@
           "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "32e9d714-5bd3-4e53-919a-ad2243f54b32"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "sdkVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/32e9d714-5bd3-4e53-919a-ad2243f54b32"
+    },
+    "android": {
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ]
+    },
+    "ios": {}
   }
 }
